@@ -16,110 +16,158 @@
 
 package org.bremersee.geojson;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
+import org.assertj.core.api.SoftAssertions;
+import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.junit.jupiter.api.Test;
-import org.locationtech.jts.geom.Coordinate;
-import org.locationtech.jts.geom.Geometry;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.locationtech.jts.geom.MultiPoint;
+import org.locationtech.jts.geom.Point;
 
 /**
  * The GeoJSON feature test.
  *
  * @author Christian Bremer
  */
+@ExtendWith(SoftAssertionsExtension.class)
 class GeoJsonFeatureTest {
 
   private static final GeoJsonGeometryFactory factory = new GeoJsonGeometryFactory();
 
   /**
+   * Gets type.
+   */
+  @Test
+  void getType() {
+    GeoJsonFeature<Point, Object> model = new GeoJsonFeature<>(null, null, null, null);
+    assertThat(model.getType()).isEqualTo(GeoJsonConstants.FEATURE);
+  }
+
+  /**
    * Gets id.
    *
+   * @param softly the softly
+   */
   @Test
-  void getId() {
-    GeoJsonFeature model = new GeoJsonFeature();
-    assertEquals(model, model);
-    assertEquals(model, new GeoJsonFeature());
-    assertEquals(model.hashCode(), new GeoJsonFeature().hashCode());
-    assertEquals(model.toString(), new GeoJsonFeature().toString());
-
-    assertNotEquals(model, null);
-    assertNotEquals(model, new Object());
-
+  void getId(SoftAssertions softly) {
     String value = "123456789";
-    model.setId(value);
-    assertEquals(value, model.getId());
-    assertEquals(model, new GeoJsonFeature(value, null, false, null));
-    assertEquals(
-        model.hashCode(),
-        new GeoJsonFeature(value, null, false, null).hashCode());
-    assertEquals(
-        model.toString(),
-        new GeoJsonFeature(value, null, false, null).toString());
+    GeoJsonFeature<Point, Object> model = new GeoJsonFeature<>(value, null, null, null);
+
+    softly.assertThat(model.getId()).isEqualTo(value);
+
+    softly.assertThat(model)
+        .isEqualTo(model);
+    softly.assertThat(model.hashCode())
+        .isEqualTo(model.hashCode());
+    softly.assertThat(model)
+        .isNotEqualTo(null);
+    softly.assertThat(model)
+        .isNotEqualTo(new Object());
+    softly.assertThat(model.toString())
+        .contains(value);
+
+    softly.assertThat(model)
+        .isEqualTo(new GeoJsonFeature<>(value, null, false, null));
+  }
+
+  /**
+   * Gets bounding box.
+   *
+   * @param softly the softly
+   */
+  @Test
+  void getBoundingBox(SoftAssertions softly) {
+    String id = "123456789";
+    double[] value = new double[]{1., 1., 10., 10.};
+    GeoJsonFeature<MultiPoint, Object> model = new GeoJsonFeature<>(id, value, null, null);
+
+    softly.assertThat(model.getBbox()).containsExactly(value);
+
+    softly.assertThat(model)
+        .isEqualTo(model);
+    softly.assertThat(model.hashCode())
+        .isEqualTo(model.hashCode());
+    softly.assertThat(model)
+        .isNotEqualTo(null);
+    softly.assertThat(model)
+        .isNotEqualTo(new Object());
+    softly.assertThat(model.toString())
+        .contains(Arrays.toString(value));
+
+    MultiPoint multiPoint = factory.createMultiPoint(List.of(
+        factory.createPoint(1., 1.),
+        factory.createPoint(10., 10.)
+    ));
+    model = new GeoJsonFeature<>(id, value, multiPoint, null);
+    softly.assertThat(model)
+        .isEqualTo(new GeoJsonFeature<>(id, multiPoint, true, null));
+
+    double[] illegal = new double[]{1., 1., 10.};
+    softly.assertThatThrownBy(() -> new GeoJsonFeature<>(id, illegal, null, null))
+        .isInstanceOf(IllegalArgumentException.class);
   }
 
   /**
    * Gets geometry.
    *
+   * @param softly the softly
+   */
   @Test
-  void getGeometry() {
-    Geometry geometry = factory.createLineString(Arrays.asList(
-        new Coordinate(1., 1.),
-        new Coordinate(5., 1.),
-        new Coordinate(6., 3.)));
-    GeoJsonFeature model = new GeoJsonFeature();
-    model.setGeometry(geometry);
-    assertEquals(geometry, model.getGeometry());
-    assertEquals(model, new GeoJsonFeature(null, geometry, false, null));
-    assertEquals(
-        model.hashCode(),
-        new GeoJsonFeature(null, geometry, false, null).hashCode());
-    assertEquals(
-        model.toString(),
-        new GeoJsonFeature(null, geometry, false, null).toString());
+  void getGeometry(SoftAssertions softly) {
+    String id = "123456789";
+    MultiPoint value = factory.createMultiPoint(List.of(
+        factory.createPoint(1., 1.),
+        factory.createPoint(10., 10.)
+    ));
+    GeoJsonFeature<MultiPoint, Object> model = new GeoJsonFeature<>(id, null, value, null);
 
-    double[] bbox = GeoJsonGeometryFactory.getBoundingBox(geometry);
-    model.setBbox(bbox);
-    assertArrayEquals(bbox, model.getBbox());
-    assertEquals(model, new GeoJsonFeature(null, geometry, true, null));
-    assertEquals(
-        model.hashCode(),
-        new GeoJsonFeature(null, geometry, true, null).hashCode());
-    assertEquals(
-        model.toString(),
-        new GeoJsonFeature(null, geometry, true, null).toString());
+    softly.assertThat(GeoJsonGeometryFactory.equals(model.getGeometry(), value))
+        .isTrue();
+
+    softly.assertThat(model)
+        .isEqualTo(model);
+    softly.assertThat(model.hashCode())
+        .isEqualTo(model.hashCode());
+    softly.assertThat(model)
+        .isNotEqualTo(null);
+    softly.assertThat(model)
+        .isNotEqualTo(new Object());
+    softly.assertThat(model.toString())
+        .contains(value.toText());
+
+    softly.assertThat(model)
+        .isEqualTo(new GeoJsonFeature<>(id, value, false, null));
   }
 
   /**
    * Gets properties.
    *
+   * @param softly the softly
+   */
   @Test
-  void getProperties() {
-    GeoJsonFeature model = new GeoJsonFeature();
-    model.getProperties().put("key", "value");
-    assertEquals("value", model.getProperties().get("key"));
-    assertEquals(
-        model,
-        new GeoJsonFeature(null, null, false, Collections.singletonMap("key", "value")));
+  void getProperties(SoftAssertions softly) {
+    Map<String, Object> value = Map.of("junit", "123456789");
+    GeoJsonFeature<Point, Object> model = new GeoJsonFeature<>(null, null, null, value);
 
-    Map<String, Object> properties = new LinkedHashMap<>();
-    properties.put("key", "value");
-    model = new GeoJsonFeature();
-    model.setProperties(properties);
-    assertEquals(properties, model.getProperties());
-    assertEquals(model,
-        new GeoJsonFeature(null, null, false, Collections.singletonMap("key", "value")));
-    assertEquals(
-        model.hashCode(),
-        new GeoJsonFeature(null, null, false, Collections.singletonMap("key", "value")).hashCode());
-    assertEquals(
-        model.toString(),
-        new GeoJsonFeature(null, null, false, Collections.singletonMap("key", "value")).toString());
+    softly.assertThat(model.getProperties()).isEqualTo(value);
+
+    softly.assertThat(model)
+        .isEqualTo(model);
+    softly.assertThat(model.hashCode())
+        .isEqualTo(model.hashCode());
+    softly.assertThat(model)
+        .isNotEqualTo(null);
+    softly.assertThat(model)
+        .isNotEqualTo(new Object());
+    softly.assertThat(model.toString())
+        .contains(value.toString());
+
+    softly.assertThat(model)
+        .isEqualTo(new GeoJsonFeature<>(null, null, false, value));
   }
-  */
+
 }
